--- a/index.html
+++ b/index.html
@@ -1,159 +1,1 @@
-<!DOCTYPE html>
-<html class="no-js" lang="zh-TW">
-  <head>
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-<meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-<title>7 號頭像產生器</title>
-<link href="images/favicon.png" rel="shortcut icon">
-<link href="/stylesheets/vender/bootstrap/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css" rel="stylesheet" />
-<link href="/stylesheets/vender/jquery.ui.core.css" rel="stylesheet" />
-<link href="/stylesheets/vender/jquery.ui.resizable.css" rel="stylesheet" />
-<link href="/stylesheets/vender/ie-alert/iealert/style.css" rel="stylesheet" />
-<link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
-<meta property="og:title" content="7 號頭像產生器" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://kp.kxgen.net/" />
-<meta property="og:image" content="http://kp.kxgen.net/images/fb.png" />
-<meta property="og:site_name" content="7 號頭像產生器" />
-<meta property="og:description" content="" />
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-47600485-33', 'auto');
-  ga('send', 'pageview');
-</script>
-</head>
-<body id="drop">
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=792777814096777&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-<div id="content" class="container">
-  <div class="row">
-    <div class="text-center" id="generator">
-      <div id="settings">
-        <div class="col-sm-12 control-box">
-          <h1 class="logo">7號頭像產生器</h1>
-          <a class="uploadBtn">請按此上傳圖片</a><span class="mobile-hide">，或直接將圖片拖曳到頁面中</span><br>我們提供了 10 幾種樣板，讓您自由選擇<br>您可自由移動、縮放圖片到合適位置和大小<br>完成後，請點擊「下載圖片」按鈕
-        </div>
-        <div class="col-sm-12 control-box">
-          <div id="templates" class="text-center" data-toggle="buttons">
-          <label class="template-label btn btn-default active" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/1.png">
-            <input type="radio" name="template" value="1" autocomplete="off" checked="checked">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/2.png">
-            <input type="radio" name="template" value="2" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/3.png">
-            <input type="radio" name="template" value="3" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/4.png">
-            <input type="radio" name="template" value="4" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/5.png">
-            <input type="radio" name="template" value="5" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/6.png">
-            <input type="radio" name="template" value="6" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/7.png">
-            <input type="radio" name="template" value="7" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/8.png">
-            <input type="radio" name="template" value="8" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/9.png">
-            <input type="radio" name="template" value="9" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/10.png">
-            <input type="radio" name="template" value="10" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/11.png">
-            <input type="radio" name="template" value="11" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/12.png">
-            <input type="radio" name="template" value="12" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/13.png">
-            <input type="radio" name="template" value="13" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/14.png">
-            <input type="radio" name="template" value="14" autocomplete="off">
-          </label>
-          <label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);">
-            <img src="images/object/15.png">
-            <input type="radio" name="template" value="15" autocomplete="off">
-          </label>
-          </div>
-        </div>
-        <div class="clear"></div>
-      </div>
-    </div>
-    <div class="col-sm-12 control-box" style="height:inherit">
-
-      <div class="preview">
-        <div id="userimage">
-          <div class="inner" style="background-image: url(images/sample.jpg)"></div>
-          <div id="size-slider"><span class="zoomin">＋</span><span class="zoomout">－</span></div>
-        </div>
-        <div id="coverimage">
-            <div class="inner" style="background-image: url(images/object/1.png)"></div>
-            <div id="dragger"></div>
-        </div>
-        <div id="dragger-border"></div>
-        <div id="loading"><div class="drop"><img src="images/loading.gif"></div></div>
-
-      </div><!-- preview end -->
-
-      <div id="formbuttons" class="control-box text-center">
-        <button href="#" id="normalSubmit">下載圖片</button>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-<img src="http://placekitten.com/g/500/500" id="loadimage" class="hide">
-<form action='#' onsubmit="return false;">
-  <input type="file" name="Filedata" id="uploadInput">
-  <div id="uploading">圖片讀取中，請稍後</div>
-</form>
-<input type="hidden" value="http://placekitten.com/g/500/500" name="source" id="source">
-<canvas id="canvas" class="hide"></canvas>
-<canvas id="thumb" class="hide"></canvas>
-<canvas id="result" class="hide"></canvas>
-<a id="download" class="hide" download="7.png">Download</a>
-<script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
-<script src="/javascripts/vender/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/javascripts/vender/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
-<script src="/javascripts/vender/jquery.ui.rotatable.min.js" type="text/javascript"></script>
-<script src="/javascripts/vender/ie-alert/iealert.min.js" type="text/javascript"></script>
-<script src="/javascripts/vender/konami.js" type="text/javascript"></script>
-<script src="/javascripts/all.js" type="text/javascript"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="zh-TW"><head><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta charset="utf-8"><meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"><title>頭像產生器</title><link href="/images/favicon.png" rel="shortcut icon"><link href="/stylesheets/vender/bootstrap/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"><link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css" rel="stylesheet"><link href="/stylesheets/vender/jquery.ui.core.css" rel="stylesheet"><link href="/stylesheets/vender/jquery.ui.resizable.css" rel="stylesheet"><link href="/stylesheets/vender/ie-alert/iealert/style.css" rel="stylesheet"><link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css"><link href="/stylesheets/vender/icomoon/style.css" media="screen" rel="stylesheet" type="text/css"><meta content="頭像產生器" property="og:title"><meta content="頭像產生器" property="og:site_name"><meta content="http://2.iing.tw" property="og:url"><meta content="http://localhost:3000" property="og:image"><meta content="頭像產生器" property="og:description"><meta content="website" property="og:type"><meta content="612130717" property="fb:admins"></head><body id="drop"><div class="header"><h1 class="logo"><a href="http://iing.tw">頭像產生器</a></h1></div><div class="intro-section"><div class="container"><h2 class="title">2號頭像產生器</h2><p class="description">我們提供了 10 幾種樣板，讓您自由選擇。您可自由移動、縮放圖片到合適位置和大小，完成後，請點擊「下載圖片」按鈕或「分享」至臉書。<br><strong>最後這一哩路，讓我們一起集氣！</strong></p><a class="start btn btn_primary-dark smooth-scroll-link" href="#editor-section">開始製作</a></div></div><div class="editor-section" id="editor-section"><div class="container"><div class="editor-row"><div class="upload-image"><div class="upload-image-inner"><div class="upload-image-row"><a class="btn btn_primary-dark uploadBtn">上傳圖片</a></div><div class="upload-image-row"><a class="btn btn_primary-dark">匯入臉書頭像</a></div></div></div><div class="preview"><div class="preview-image"><div id="userimage"><div class="inner" style="background-image: url(images/sample.jpg)"></div></div><div id="coverimage"><div class="inner" style="background-image: url(images/object/1.png)"></div><div id="dragger"></div></div><div id="dragger-border"></div><div id="loading"><div class="drop"><img src="images/loading.gif"></div></div></div><div id="size-slider"><span class="zoomin icon-zoomin"></span><span class="zoomout icon-zoomout"></span></div></div></div><div class="editor-row"><div class="templates" data-toggle="buttons" id="templates"><label class="template-label btn btn-default active" style="background-image: url(images/sample.jpg);"><img src="images/object/1.png"><input autocomplete="off" checked="checked" name="template" type="radio" value="1"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/2.png"><input autocomplete="off" name="template" type="radio" value="2"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/3.png"><input autocomplete="off" name="template" type="radio" value="3"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/4.png"><input autocomplete="off" name="template" type="radio" value="4"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/5.png"><input autocomplete="off" name="template" type="radio" value="5"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/6.png"><input autocomplete="off" name="template" type="radio" value="6"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/7.png"><input autocomplete="off" name="template" type="radio" value="7"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/8.png"><input autocomplete="off" name="template" type="radio" value="8"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/9.png"><input autocomplete="off" name="template" type="radio" value="9"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/10.png"><input autocomplete="off" name="template" type="radio" value="10"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/11.png"><input autocomplete="off" name="template" type="radio" value="11"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/12.png"><input autocomplete="off" name="template" type="radio" value="12"></label><label class="template-label btn btn-default" style="background-image: url(images/sample.jpg);"><img src="images/object/13.png"><input autocomplete="off" name="template" type="radio" value="13"></label></div><div class="finish-editor"><a class="btn btn_primary-dark smooth-scroll-link" href="#action-section">完成編輯</a></div></div></div></div><div class="action-section" id="action-section"><div class="container"><div class="action-section-content"><a class="share btn btn_primary-dark"><i class="icon-facebook"></i>分享至臉書</a><button class="download btn btn_primary-dark" id="normalSubmit"><i class="icon-download-icon"></i>下載圖片</button></div><p class="copyright">© 2016 蔡英文陳建仁競選辦公室</p></div></div><form action="#" onsubmit="return false;"><input id="uploadInput" name="Filedata" type="file"><div id="uploading">圖片讀取中，請稍後</div></form><input id="source" name="source" type="hidden" value="/images/sample.jpg"><div class="hide"><canvas id="canvas"></canvas><canvas id="thumb"></canvas><canvas id="result"></canvas><a download="iing-no-2.png" id="download"> Download</a></div><script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script><script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script><script src="/javascripts/vender/bootstrap/js/bootstrap.min.js" type="text/javascript"></script><script src="/javascripts/vender/jquery.ui.touch-punch.min.js" type="text/javascript"></script><script src="/javascripts/vender/jquery.ui.rotatable.min.js" type="text/javascript"></script><script src="/javascripts/vender/ie-alert/iealert.min.js" type="text/javascript"></script><script src="/javascripts/vender/smooth-scroll.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script></body></html>
